finish tests for scenario handler
