# api/openapi.yaml
@@ -147,9 +147,12 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/ScenarioMetadata'
+                type: object
+                properties:
+                  elements:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/ScenarioMetadata'
     put:
       tags:
         - scenario
